[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pySTORM"
version = "0.1"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.59.2",
    "imageio==2.37.0",
    "kiwisolver==1.4.9",
    "lazy_loader==0.4",
    "llvmlite==0.44.0",
    "matplotlib==3.10.6",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "pandas==2.3.2",
    "pillow==11.3.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-image==0.25.2",
    "scipy==1.16.2",
    "six==1.17.0",
    "tifffile==2025.9.9",
    "tzdata==2025.2"
]

requires-python = ">=3.11"
authors = [
  {name = "Matthew Tang", email = "matthew.tang@linacre.ox.ac.uk"},

]
maintainers = [
  {name = "Matthew Tang", email = "matthew.tang@linacre.ox.ac.uk"}
]
description = "A user-friendly, minimalist package for SMLM localisation."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["STORM", "single-molecule", "localisation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = ["ruff >= 0.14.0"]

[project.urls]
Homepage = ""
Documentation = ""
Repository = "https://github.com/Matthewt303/pySTORM.git"
